<resources>
    <string name="app_name">MEPA</string>
    <string name="btn_menu">Menü</string>
    <string name="txtv_info">Hier folgt noch ein Infotext!</string>
    <string name="btn_falleingabe">Falleingabe</string>
    <string name="imgv_logo">Festivealth Logo</string>
    <string name="txtv_menu">Menü</string>
    <string name="txtv_start">Start</string>
    <string name="txtv_einstellungen">Einstellungen</string>
    <string name="txtv_falleingabe">Falleingabe</string>
    <string name="txtv_falluebersicht">Fallübersicht</string>
    <string name="txtv_stammdaten">Stammdaten</string>
    <string name="btn_menu_stammd">Menü</string>
    <string name="txtv_kreisverband">Kreisverband</string>
    <string name="txtv_ortsverein">Ortsverein</string>
    <string name="txtv_ort">Ort</string>
    <string name="txtv_veranstaltung">Veranstaltung</string>
    <string name="txtv_hilfsstelle">Hilfsstelle</string>
    <string name="txtv_mosan">MoSan Team</string>
    <string name="txtv_sanw">San Wache</string>
    <string name="btn_speichern">Speichern</string>
    <string name="btn_verwerfen">Verwerfen</string>
    <string name="btn_stammdat_einst">Stammdaten verwalten</string>
    <string name="btn_löschen_einst">Lokale Daten löschen</string>
    <string name="btn_sync_einst">Daten synchronisieren</string>
    <string name="txtv_pers_daten">Persönliche Daten</string>
    <string name="txtv_notfallsituation">Notfallsituation</string>
    <string name="txtv_verletzung">Verletzung</string>
    <string name="txtv_erkrankung">Erkr./Verg.</string>
    <string name="txtv_maßnahmen">Maßnahmen</string>
    <string name="txtv_erstbefund">Erstbefund</string>
    <string name="txtv_ersthelfermaßnahmen">Ersthelfermaßnahmen</string>
    <string name="pers_daten">Persönliche Daten</string>
    <string name="txtv_name_pers_daten">Pflichtfeld Nachname</string>
    <string name="txtv_vorname_pers_daten">Pflichtfeld Vorname</string>
    <string name="txtv_str_pers_daten">Straße</string>
    <string name="txtv_plz_pers_daten">Postleitzahl</string>
    <string name="txtv_ort_pers_daten">Wohnort</string>
    <string name="txtv_telefon_pers_daten">Telefon</string>
    <string name="cck_patient_pers_daten">Patient</string>
    <string name="cck_familie_pers_daten">Familie</string>
    <string name="cck_freunde_pers_daten">Freunde</string>
    <string name="txtv_geb_pers_daten">Pflichtfeld Geboren am</string>
    <string name="txtv_fundort_pers_daten">Ggf. Fundort</string>
    <string name="txtv_krankenkasse_pers_daten">Krankenkasse</string>
    <string name="txtv_zugefuehrt">Der Hilfsstelle zugeführt durch:</string>
    <string name="cck_polizei">Polizei</string>
    <string name="cck_rtw">RTW/KTW</string>
    <string name="cck_san">San-Team</string>
    <string name="cck_sec">Security</string>
    <string name="cck_ang">Angehörige</string>
    <string name="cck_selbst">Selbst</string>
    <string name="cck_pas">Passanten</string>
    <string name="sonstiges">Sonstiges</string>
    <string name="txtv_notfall">Notfallsituation</string>
    <string name="txtv_beschreibung_notfall">Bitte beschreiben Sie die Notfallsituation:</string>
    <string name="verletzung">Verletzung</string>
    <string name="cck_prellung">Prellung/\nVerletzung</string>
    <string name="cck_wunde">Wunde/\nVerletzung</string>
    <string name="cck_verbrennung">Verbrennung</string>
    <string name="cck_inhalation">Inhalations-\ntrauma</string>
    <string name="cck_elektro">Elektrounfall</string>
    <string name="txtv_schaedel">Schädel-Hirn</string>
    <string name="txtv_gesicht">Gesicht</string>
    <string name="txtv_hws">HWS</string>
    <string name="txtv_brustkorb">Brustkorb</string>
    <string name="txtv_bauch">Bauch</string>
    <string name="txtv_bws">BWS / LWS</string>
    <string name="txtv_becken">Becken</string>
    <string name="txtv_arme">Arme</string>
    <string name="txtv_beine">Beine</string>
    <string name="txtv_weichteile">Weichteile</string>
        <string-array name="drawer_nav_falleingabe">
        <item>Start</item>
        <item>Einstellungen</item>
        <item>Fallübersicht</item>
            <item>Upload</item>
            <item>Impressum</item>
            <item>Stammdaten</item>
    </string-array>
    <string-array name="drawer_nav_einstellungen">
        <item>Start</item>
        <item>Falleingabe</item>
        <item>Fallübersicht</item>
        <item>Upload</item>
        <item>Impressum</item>
        <item>Stammdaten</item>
    </string-array>
    <string name="txtv_upload">Upload</string>
    <string name="txtv_upload_usb">USB</string>
    <string name="txtv_upload_upload">Upload</string>
    <string name="txtv_upload_bluetooth">Bluetooth</string>
    <string name="txtv_upload_email">E-Mail</string>
    <string-array name="drawer_nav_upload">
        <item>Start</item>
        <item>Einstellungen</item>
        <item>Falleingabe</item>
        <item>Fallübersicht</item>
        <item>Impressum</item>
        <item>Stammdaten</item>
    </string-array>
    <string-array name="drawer_nav_erfassung">
        <item>Start</item>
        <item>Einstellungen</item>
        <item>Falleingabe</item>
        <item>Fallübersicht</item>
        <item>Upload</item>
        <item>Impressum</item>
        <item>Stammdaten</item>
    </string-array>
    <string-array name="drawer_nav_stammdaten">
        <item>Start</item>
        <item>Einstellungen</item>
        <item>Falleingabe</item>
        <item>Fallübersicht</item>
        <item>Upload</item>
        <item>Impressum</item>
    </string-array>
    <string name="drawer_open">Menü öffnen</string>
    <string name="drawer_close">Menü schließen</string>
    <string name="txtv_mitarbeiter_konfig">Mitarbeiter Konfiguration</string>
    <string name="txtv_person">Person</string>
    <string name="txtv_uebergabe">Übergabe</string>
    <string name="txtv_bemerkung">Bemerkung</string>
    <string name="abbrechen">Abbrechen</string>
    <string name="loeschen">Löschen  </string>
    <string-array name="drawer_nav">
        <item>Start</item>
        <item>Einstellungen</item>
        <item>Falleingabe</item>
        <item>Fallübersicht</item>
        <item>Upload</item>
        <item>Impressum</item>
        <item>Stammdaten</item>
    </string-array>
    <string name="txtv_versichertennr">Versichertennummer</string>
    <string name="txtv_versicherungsnr">Versicherungsnummer</string>
    <string-array name="drawer_nav_neu">
        <item>Falleingabe</item>
        <item>Fallübersicht</item>
        <item>Upload</item>
        <item>Einstellungen</item>
        <item>Impressum</item>
    </string-array>
    <string name="weiblich">weiblich</string>
    <string name="maennlich">männlich</string>
    <string name="etxt_hausnr">Nr</string>
    <string name="txtv_land_pers_daten">Land</string>
    <string name="txtv_veranstaltung_datum">Veranstaltungsdatum</string>
    <string name="txtv_mitarbeiter_konfig_onb">Mitarbeiter \nKonfiguration</string>
    <string name="txtv_willkommenText">Geben Sie die Daten Ihrer Schicht ein bevor Sie einen Fall erfassen.</string>
    <string name="txtv_willkommen">Willkommen bei Festivealth!</string>
    <string name="btn_skip">Überspringen</string>
    <string name="erkrankung">Erkrankung</string>
    <string name="txtv_keine">keine</string>
    <string name="txtv_atmung">Atmung</string>
    <string name="txtv_vergiftung">Vergiftung</string>
    <string name="txtv_schwindel">Schwindel</string>
    <string name="txtv_herz_kreislauf">Herz-Kreislauf</string>
    <string name="txtv_uebelkeit">Übelkeit/Erbrechen</string>
    <string name="txtv_unterkuehlung">Unterkühlung</string>
    <string name="txtv_baucherkrankung">Baucherkrankung</string>
    <string name="txtv_hitzeschlag">Hitzeschlag</string>
    <string name="txtv_hitzeerschoepfung">Hitzeerschöpfung</string>
    <string name="txtv_alkoholisiert">alkoholisiert</string>
    <string name="txtv_stoffwechsel">Stoffwechsel</string>
    <string name="txtv_neurologie">Neurologie</string>
    <string name="txtv_psychatrie">Psychatrie</string>
    <string name="txtv_gynaekologie">Gynäkologie</string>
    <string name="txtv_geburtshilfe">Geburtshilfe</string>
    <string name="txtv_kindernotfall">Kindernotfall</string>
    <string name="txtv_sonstiges">Sonstiges</string>
    <string name="massnahmen">Maßnahmen</string>
    <string name="txtv_seitenlage">Stabile Seitenlage</string>
    <string name="txtv_extremitaetenschienung">Extremitätenschienung</string>
    <string name="txtv_sauerstoffgabe">Sauerstoffgabe</string>
    <string name="txtv_oberkoerperhochlage">Oberkörperhochlage</string>
    <string name="txtv_wundversorgung">Wundversorgung</string>
    <string name="txtv_intubation">Intubation</string>
    <string name="txtv_flachlagerung">Flachlagerung</string>
    <string name="txtv_ekgmonitoring">EKG-Monitoring</string>
    <string name="txtv_beatmung">Beatmung</string>
    <string name="txtv_schocklagerung">Schocklagerung</string>
    <string name="txtv_venoeserzugang">Venöser Zugang</string>
    <string name="txtv_herzdruckmassage">Herzdruckmassage</string>
    <string name="txtv_infusion">Infusion</string>
    <string name="txtv_betreuung">Betreuung</string>
    <string name="txtv_medikamente">Medikamente</string>
    <string name="cck_massnahmen_hwsstuetzkragen">HWS-Stützkragen</string>
    <string name="cck_massnahmen_atemwege">Atemwege freimachen</string>
    <string name="cck_massnahmen_vakuummatratze">Vakuummatratze</string>
    <string name="cck_massnahmen_erstdefibrillation">Erstdefibrillation</string>
    <string name="txtv_notkompetenzmassnahmen">Notkompetenzmaßnahmen</string>
    <string name="erstbefund">Erstbefund</string>
    <string name="txtv_bewusstseinslage">Bewusstseinslage</string>
    <string name="txtv_kreislauf">Kreislauf</string>
    <string name="cck_schock_erstbefund">Schock</string>
    <string name="cck_kreislaufstillstand_erstbefund">Kreislaufstillstand</string>
    <string name="cck_puls_regelmaessig_erstbefund">Puls regelmäßig</string>
    <string name="cck_puls_unregelmaessig_erstbefund">Puls unregelmäßig</string>
    <string name="txtv_pupillenfunktion">Pupillenfunktion</string>
    <string name="txtv_rechts">rechts</string>
    <string name="txtv_links">links</string>
    <string name="cck_eng">eng</string>
    <string name="cck_mittel">mittel</string>
    <string name="cck_weit">weit</string>
    <string name="cck_lichtreaktion">Lichtreaktion</string>
    <string name="cck_entrundet">entrundet</string>
    <string name="txtv_ekg">EKG</string>
    <string name="txtv_schmerzen">Schmerzen</string>
    <string name="uebergabe">Übergabe</string>
    <string name="txtv_ergebnis">Ergebnis</string>
    <string name="txtv_wertsachen">Übergabe Wertsachen</string>
    <string name="txtv_ersthelfermassnahmen">Ersthelfermaßnahmen</string>
    <string name="txtv_suffizient">Suffizient</string>
    <string name="txtv_insuffizient">Insuffizient</string>
    <string name="txtv_aed">AED</string>
    <string name="txtv_zustand">Zustand</string>
    <string name="txtv_transport">Transport</string>
    <string name="txtv_notarzt">Notarzt</string>
    <string name="cck_hausarzt_informiert">Hausarzt/ABD informiert</string>
    <string name="cck_tod_unfallort">Tod am Unfallort</string>
    <string name="txtv_zeit">Zeit</string>
    <string name="txtv_uebergabe_wertsachen">Übergabe Wertsachen</string>
    <string name="txtv_nachforderung">Nachforderung</string>
    <string name="cck_ktw">KTW</string>
    <string name="cck_uebergabe_rtw">RTW</string>
    <string name="cck_nef">NEF</string>
    <string name="cck_naw">NAW</string>
    <string name="cck_rth">RTH</string>
    <string name="cck_feuerwehr">Feuerwehr</string>
    <string name="cck_uebergabe_polizei">Polizei</string>
    <string name="txtv_entlassung">Transport/Übergabe/Entlassung</string>
    <string name="txtv_funkruf">Funkruf</string>
    <string name="txtv_entlassung_ziel">Ziel</string>
</resources>