<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="festivealth.falleingabe.erstbefund">

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_menu"
        android:id="@+id/btn_menu"
        android:background="#2e5897"
        android:textColor="#ffffff"
        android:textSize="30sp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtv_maßnahmen"
        android:id="@+id/textView2"
        android:layout_below="@+id/btn_menu"
        android:layout_centerHorizontal="true"
        android:textSize="30sp" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtv_keine"
        android:id="@+id/checkBox13"
        android:onClick="selectItem"
        android:checked="false"
        android:textSize="20sp"
        android:layout_below="@+id/textView2"
        android:layout_alignLeft="@+id/btn_menu"
        android:layout_alignStart="@+id/btn_menu" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtv_seitenlage"
        android:id="@+id/checkBox14"
        android:onClick="selectItem"
        android:layout_below="@+id/checkBox13"
        android:layout_alignLeft="@+id/checkBox13"
        android:layout_alignStart="@+id/checkBox13"
        android:checked="false"
        android:textSize="20sp" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtv_herzdruckmassage"
        android:id="@+id/checkBox15"
        android:onClick="selectItem"
        android:layout_below="@+id/checkBox14"
        android:layout_alignLeft="@+id/checkBox14"
        android:layout_alignStart="@+id/checkBox14"
        android:checked="false"
        android:textSize="20sp" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtv_schocklagerung"
        android:id="@+id/checkBox16"
        android:onClick="selectItem"
        android:layout_below="@+id/checkBox15"
        android:layout_alignLeft="@+id/checkBox15"
        android:layout_alignStart="@+id/checkBox15"
        android:checked="false"
        android:textSize="20sp" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtv_oberkoerperhochlage"
        android:id="@+id/checkBox18"
        android:onClick="selectItem"
        android:checked="false"
        android:textSize="20sp"
        android:layout_below="@+id/checkBox16"
        android:layout_alignLeft="@+id/checkBox16"
        android:layout_alignStart="@+id/checkBox16" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtv_flachlagerung"
        android:id="@+id/checkBox19"
        android:onClick="selectItem"
        android:layout_below="@+id/checkBox18"
        android:layout_alignLeft="@+id/checkBox18"
        android:layout_alignStart="@+id/checkBox18"
        android:checked="false"
        android:textSize="20sp" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtv_wundversorgung"
        android:id="@+id/checkBox20"
        android:onClick="selectItem"
        android:layout_below="@+id/checkBox19"
        android:layout_alignLeft="@+id/checkBox19"
        android:layout_alignStart="@+id/checkBox19"
        android:checked="false"
        android:textSize="20sp" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtv_sauerstoffgabe"
        android:id="@+id/checkBox21"
        android:onClick="selectItem"
        android:layout_below="@+id/checkBox20"
        android:layout_alignLeft="@+id/checkBox20"
        android:layout_alignStart="@+id/checkBox20"
        android:checked="false"
        android:textSize="20sp" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtv_venoeserzugang"
        android:id="@+id/checkBox23"
        android:onClick="selectItem"
        android:checked="false"
        android:textSize="20sp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/checkBox21" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtv_medikamente"
        android:id="@+id/checkBox24"
        android:onClick="selectItem"
        android:checked="false"
        android:textSize="20sp"
        android:layout_below="@+id/checkBox23"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtv_beatmung"
        android:id="@+id/checkBox25"
        android:onClick="selectItem"
        android:checked="false"
        android:textSize="20sp"
        android:layout_below="@+id/checkBox24"
        android:layout_alignLeft="@+id/checkBox24"
        android:layout_alignStart="@+id/checkBox24" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtv_betreuung"
        android:id="@+id/checkBox26"
        android:onClick="selectItem"
        android:checked="false"
        android:textSize="20sp"
        android:layout_below="@+id/checkBox25"
        android:layout_alignLeft="@+id/checkBox25"
        android:layout_alignStart="@+id/checkBox25" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtv_infusion"
        android:id="@+id/checkBox27"
        android:onClick="selectItem"
        android:checked="false"
        android:textSize="20sp"
        android:layout_below="@+id/checkBox26"
        android:layout_alignLeft="@+id/checkBox26"
        android:layout_alignStart="@+id/checkBox26" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtv_intubation"
        android:id="@+id/checkBox28"
        android:onClick="selectItem"
        android:checked="false"
        android:textSize="20sp"
        android:layout_alignLeft="@+id/checkBox27"
        android:layout_alignStart="@+id/checkBox27" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtv_sonstiges"
        android:id="@+id/checkBox29"
        android:onClick="selectItem"
        android:checked="false"
        android:textSize="20sp"
        android:layout_below="@+id/checkBox27"
        android:layout_alignLeft="@+id/checkBox27"
        android:layout_alignStart="@+id/checkBox27" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText"
        android:layout_alignBottom="@+id/checkBox29"
        android:layout_toRightOf="@+id/checkBox26"
        android:layout_alignRight="@+id/btn_menu"
        android:layout_alignEnd="@+id/btn_menu" />

    <Button
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_fertig"
        android:layout_alignTop="@+id/checkBox13"
        android:layout_alignRight="@+id/btn_menu"
        android:layout_alignEnd="@+id/btn_menu"
        android:onClick="finalSelection" />
</RelativeLayout>
