<?xml version="1.0" encoding="utf-8"?>
<!-- Zuletzt bearbeitet von Vivien Stumpe am 03.04.16 -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="de.app.mepa.falleingabe.Falleingabe">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/txtv_falleingabe"
        android:id="@+id/txtv_falleingabe_fallein"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textSize="30sp"
        android:textColor="#000000"
        android:gravity="center" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_menu"
        android:id="@+id/btn_menu_fallein"
        android:layout_below="@+id/txtv_falleingabe_fallein"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:background="#2e5897"
        android:gravity="center"
        android:textColor="#ffffff"
        android:textSize="20sp"
        android:layout_marginTop="30dp" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/btn_menu_fallein"
        android:layout_marginTop="20dp"
        android:id="@+id/lnl_falleingabe"
        android:gravity="center">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/txtv_pers_daten"
            android:id="@+id/txtv_pers_daten"
            android:background="#e5dede"
            android:textColor="#000000"
            android:textSize="20sp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/txtv_notfallsituation"
            android:id="@+id/txtv_notfallsit"
            android:textColor="#010101"
            android:background="#e5dede"
            android:textSize="20sp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/txtv_verletzung"
            android:id="@+id/txtv_verletzung"
            android:textSize="20sp"
            android:background="#e5dede"
            android:textColor="#000000"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/txtv_erkrankung"
            android:id="@+id/txtv_erkrankung"
            android:textColor="#000000"
            android:textSize="20sp"
            android:background="#e5dede"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/txtv_maßnahmen"
            android:id="@+id/txtv_maßnahmen"
            android:textColor="#000000"
            android:textSize="20sp"
            android:background="#e5dede"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/txtv_erstbefund"
            android:id="@+id/txtv_erstbefund"
            android:textColor="#000000"
            android:textSize="20sp"
            android:background="#e5dede"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/txtv_ersthelfermaßnahmen"
            android:id="@+id/txtv_ersthelferm"
            android:textColor="#000000"
            android:textSize="20sp"
            android:background="#e5dede"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp" />
    </LinearLayout>
</RelativeLayout>
